--- a/static/index.html
+++ b/static/index.html
@@ -217,12 +217,15 @@
                 <option value="gpustack">GPUStack</option>
                 <option value="intel_ovms">Intel OVMS</option>
             </optgroup>
+            <optgroup label="自定义">
+                <option value="custom">🔧 自定义平台</option>
+            </optgroup>
         </select>
         <label>模型</label>
         <input type="text" id="model" value="gpt-4o">
         <label>API Key</label>
         <input type="password" id="apiKey" placeholder="输入 API Key">
-        <label>自定义 API 地址 (可选)</label>
+        <label>API 地址 <span id="urlHint">(可选)</span></label>
         <input type="text" id="customUrl" placeholder="留空使用默认地址">
         <label>Temperature</label>
         <input type="number" id="temperature" value="0.7" min="0" max="2" step="0.1">
@@ -462,6 +465,14 @@ function updateLastMessage(content) {
 
 document.getElementById('provider').onchange = function() {
     document.getElementById('model').value = modelMap[this.value] || '';
+    const hint = document.getElementById('urlHint');
+    if (this.value === 'custom') {
+        hint.textContent = '(必填)';
+        hint.style.color = '#e53e3e';
+    } else {
+        hint.textContent = '(可选)';
+        hint.style.color = '';
+    }
     const session = getCurrentSession();
     if (session) {
         session.provider = this.value;
